[gd_scene load_steps=8 format=3 uid="uid://e0cgfi7sailu"]

[ext_resource type="Texture2D" uid="uid://b7nfoex71eyos" path="res://Assets/Nuotraukos/Mushroom1/StandRight.png" id="1_dsucn"]
[ext_resource type="Script" path="res://Assets/Enemies/basic_angry_shroom.gd" id="1_tunvp"]
[ext_resource type="Texture2D" uid="uid://c5aysf7vh288a" path="res://Assets/Nuotraukos/Mushroom1/RunRight1.png" id="2_pgeuh"]
[ext_resource type="Texture2D" uid="uid://bwvu0ax7mfve" path="res://Assets/Nuotraukos/Mushroom1/RunRight2.png" id="3_h0xqs"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ko5vl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dsucn")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pgeuh")
}, {
"duration": 1.0,
"texture": ExtResource("3_h0xqs")
}],
"loop": true,
"name": &"Walking",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pr8cm"]
size = Vector2(72, 72)

[sub_resource type="CircleShape2D" id="CircleShape2D_3cbp3"]
radius = 209.022

[node name="BasicAngryShroom" type="CharacterBody2D"]
script = ExtResource("1_tunvp")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ko5vl")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.735418

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_pr8cm")

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
visible = false
shape = SubResource("CircleShape2D_3cbp3")

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-19, 35)
target_position = Vector2(0, 10)

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2(19, 35)
target_position = Vector2(0, 10)

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_detection_body_exited"]
